# calculo_estadisticas

./: .coderabbit.yaml  AGENTS.md  README.md  datos.csv  procesar_data.py  pyproject.toml
calculo_estadisticas/: __init__.py  analisis.py
tests/: conftest.py  test_analisis.py
